# palinstrophy

./: .gitignore  CLAUDE.md  CUDA.bat  CUDA.ps1  README.md  Re_from_N_K0.py  lstsq_metadata.py  macos.spec  make_dmg.sh  opts_log.txt  pyproject.toml  sim_loop.py  sim_loop.sh  sim_metadata.csv  sim_output_2.txt  win32.spec
palinstrophy/: palinstrophy.icns  timeaverage_spectrum.py  turbo_main.py  turbo_postprocess.py  turbo_simulator.py  turbo_viewcase.py  turbo_wrapper.py
rtxtest/: energy_spectrum.csv  metrics.csv
tools/: CUDA.bat  lstsq_metadata_kol.py  sim_512_1001_cpu_linux.txt  sim_512_1001_cpu_macOS.txt  sim_512_1001_gpu_linux.txt  sim_output.txt
