[project]
name = "mannetroll-palinstrophy"
version = "0.1.0"
description = "2D Turbulence (SciPy + CuPy)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }

authors = [
  { name = "Torbjörn Sjögren" }
]

dependencies = [
  "numpy>=2.3.5,<3",
  "numba>=0.63.1,<1",
  "Pillow>=12,<13",
  "scipy>=1.16.3,<2",
  "PySide6>=6.10.1,<7",
  "matplotlib",
]

# Optional GPU extra
[project.optional-dependencies]
cuda = [
  "cupy-cuda13x>=13.6.0",
  "fastrlock>=0.8",
]

[project.scripts]
turbulence = "palinstrophy.turbo_main:main"
sim = "palinstrophy.turbo_simulator:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["palinstrophy"]

[tool.setuptools.package-data]
palinstrophy = ["*.icns"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
