[project]
name = "mannetroll-palinstrophy"
version = "0.1.3"
description = "2D Turbulence (SciPy + CuPy)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "Torbjörn Sjögren" }
]

dependencies = [
  "numpy>=2.4.4,<3",
  "numba>=0.65.0,<1",
  "matplotlib>=3.10.8,<4",
  "Pillow>=12.2.0,<13",
  "scipy>=1.17.1,<2",
  "PySide6>=6.11.0,<7",
  "pyarrow>=24.0.0,<25",
]

# Optional GPU extra
[project.optional-dependencies]
cuda = [
  "cupy-cuda13x>=13.6.0; sys_platform != 'darwin'",
  "fastrlock>=0.8",
]

[project.scripts]
turbulence = "palinstrophy.turbo_main:main"
sim = "palinstrophy.turbo_simulator:main"
color = "palinstrophy.turbo_postprocess:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["palinstrophy"]

[tool.setuptools.package-data]
palinstrophy = ["*.icns", "*.ico"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]

